# api-benchmarking

./: README.md  base.yaml  docker-compose.yaml  package-lock.json  package.json  res.json
bun-api/: .dockerignore  Dockerfile  README.md  bun.lockb  index.ts  package.json
data-server/: index.js  package-lock.json  package.json
deno-api/: Dockerfile  index.ts
go-api/: Dockerfile  docker-compose.yaml  go.mod
go-api/cmd/bench/: main.go
go-api/internal/db/: db.go
go-api/internal/handlers/: handlers.go
go-api/internal/routes/: routes.go
koa-api/: Dockerfile  index.js  package-lock.json  package.json
node-api/: Dockerfile  index.js  package-lock.json  package.json
python-api/: main.py
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
test/: artillery_script.yaml  report.json
test/reports/: bun.json  deno.json  go.json  koa.json  node.json
ui/: index.html  index.js
