[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


hyper = "~0.13.4"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.2"
pretty_env_logger = "0.4"
futures = "0.3.0"
queryst = "1"
diesel = { version = "1.4", features = ["postgres"] }
postgres = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_postgres = "0.2.0"
sqlx = { version = "0.6.2", features = [
    "runtime-actix-native-tls",
    "postgres",
] }
chrono = { version = "0.4.23", features = ["serde"] }
pgdatetime = { version = "0.3.0", features = ["serde"] }
